# tracecat-custom-registry

./: README.md  pyproject.toml
custom-registry/: __init__.py
custom-registry/integrations/: wazuh.py
tracecat-custom-registry/templates/: wazuh-list-agents.yaml
