[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[project]
name = "tracecat-custom-registry"  # This must be the same name as your package
description = "Tracecat actions and integrations registry managed by AgoraCalyce"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Maxime Wewer" }]
dynamic = ["version"]
dependencies = []  # Add your pip dependencies here

[tool.hatch.version]
path = "tracecat-custom-registry/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["tracecat-custom-registry"]
# Include YAML templates in pip package
include = ["/tracecat-custom-registry", "/tracecat-custom-registry/**/*.yml"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "tracecat @ git+https://github.com/TracecatHQ/tracecat",
    "tracecat_registry[cli] @ git+https://github.com/TracecatHQ/tracecat#subdirectory=registry&egg=tracecat_registry",
]